@@ -23,9 +23,11 @@ module RDF
     require 'rdf/rdfxml/format'
     require 'rdf/rdfxml/vocab'
     require 'rdf/rdfxml/patches/array_hacks'
+    require 'rdf/rdfxml/patches/literal_hacks'
     require 'rdf/rdfxml/patches/nokogiri_hacks'
     require 'rdf/rdfxml/patches/qname_hacks'
     require 'rdf/rdfxml/patches/rdf_escape'
+    require 'rdf/rdfxml/patches/uri_hacks'
     autoload :Reader,  'rdf/rdfxml/reader'
     autoload :Writer,  'rdf/rdfxml/writer'
     autoload :VERSION, 'rdf/rdfxml/version'
