@@ -3,8 +3,8 @@ module RDF::RDFXML
   # RDFXML format specification.
   #
   # @example Obtaining an RDFXML format class
-  #   RDF::Format.for(:rdf)        # RDF::RDFXML::Format
-  #   RDF::Format.for(:xml)        # RDF::RDFXML::Format
+  #   RDF::Format.for(:rdf)         # RDF::RDFXML::Format
+  #   RDF::Format.for(:rdfxml)      # RDF::RDFXML::Format
   #   RDF::Format.for("etc/foaf.xml")
   #   RDF::Format.for(:file_name      => "etc/foaf.xml")
   #   RDF::Format.for(:file_extension => "xml")
